<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/very_small"
    android:layout_marginStart="@dimen/large"
    android:layout_marginEnd="@dimen/large"
    android:layout_marginBottom="@dimen/small_to_normal"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="@dimen/very_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_white_rad_10"
        android:padding="@dimen/small_to_normal">

        <ImageView
            android:id="@+id/iv_cart_product_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/processor_intel_core"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_cart_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_cart_product_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_cart_product_category"
            style="@style/TextNormalGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:text="@string/product_component_detail"
            app:layout_constraintStart_toEndOf="@id/iv_cart_product_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_product_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_cart_product_price"
            style="@style/TextLargeWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginTop="@dimen/small"
            android:text="@string/product_price"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@id/iv_cart_product_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_product_category" />

        <Button
            android:id="@+id/btn_cart_reduce_amount"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginTop="@dimen/very_small"
            android:background="@drawable/bg_rect_grey"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/label_minus"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toEndOf="@id/iv_cart_product_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_product_price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_cart_product_amount"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/very_small"
            android:paddingEnd="@dimen/very_small"
            android:layout_height="15dp"
            android:background="@drawable/bg_rect_grey_30"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/amount_of_product"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@id/btn_cart_reduce_amount"
            app:layout_constraintStart_toEndOf="@id/btn_cart_reduce_amount"
            app:layout_constraintTop_toTopOf="@id/btn_cart_reduce_amount"/>

        <Button
            android:id="@+id/btn_cart_increase_amount"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/bg_rect_grey"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/label_plus"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_product_amount"
            app:layout_constraintStart_toEndOf="@id/tv_cart_product_amount"
            app:layout_constraintTop_toTopOf="@id/tv_cart_product_amount"/>

        <ImageButton
            android:id="@+id/btn_cart_delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>