<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/very_small"
    android:layout_marginStart="@dimen/large"
    android:layout_marginEnd="@dimen/large"
    android:layout_marginBottom="@dimen/small_to_normal"
    android:layout_height="wrap_content"
    android:elevation="@dimen/very_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_white_rad_10"
        android:padding="@dimen/small_to_normal">

        <ImageView
            android:id="@+id/iv_product_payment"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/processor_intel_core"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_product_payment"
            style="@style/TextLargeWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_product_payment"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_component_product_payment"
            style="@style/ComponentProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:text="@string/product_component_detail"
            app:layout_constraintStart_toEndOf="@id/iv_product_payment"
            app:layout_constraintTop_toBottomOf="@id/tv_name_product_payment"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_item_payment"
            style="@style/TextLargeWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginTop="@dimen/small"
            android:text="@string/product_price"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@id/iv_product_payment"
            app:layout_constraintTop_toBottomOf="@id/tv_component_product_payment"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_amount_product_buy"
            style="@style/TextLargeWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_product_buy"
            android:textColor="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>